figure caption responsive on mobile device fixed

--- a/src/components/ThirdSection.css
+++ b/src/components/ThirdSection.css
@@ -43,7 +43,7 @@
 
 @media (min-width: 400px) {
     .figure-caption {
-      bottom: 28% !important;
+      bottom: 25% !important;
     }
   }
 
